--- a/vignettes/clinTables.Rmd
+++ b/vignettes/clinTables.Rmd
@@ -3,7 +3,7 @@ title: "clinTables"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{clinTables}
-  %\VignetteEngine{knitr::rmarkdown}
+  %\VignetteEngine{rmarkdown::render}
   %\VignetteEncoding{UTF-8}
 ---
 
