--- a/README.Rmd
+++ b/README.Rmd
@@ -21,37 +21,23 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/ahasoplakus/clinTables/branch/devel/graph/badge.svg?token=G5URJVIVQM)](https://codecov.io/gh/ahasoplakus/clinTables)
 <!-- badges: end -->
 
-The goal of clinTables is to ...
+`clinTables` is a shiny app to visualize standard tables used in <b>Clinical Trials</b> through a <b>Shiny</b> Web Application
+
+<left>
+Find the <b>app</b> here: [clinTables](https://sukalpo94.shinyapps.io/clinTables/)
+</left>
 
 ## Installation
 
-You can install the development version of clinTables like so:
+Latest `dev` version
 
-``` r
-# FILL THIS IN! HOW CAN PEOPLE INSTALL YOUR DEV PACKAGE?
+```{r, eval=FALSE}
+remotes::install_github("ahasoplakus/clinTables")
 ```
 
-## Example
+Run `library(clinTables)` to access all the exported functions from `clinTables` that help in reproducing analysis performed in the app. Or, you can run the application locally using:
 
-This is a basic example which shows you how to solve a common problem:
-
-```{r example}
-library(clinTables)
-## basic example code
+```{r, eval=FALSE}
+# Launch the application 
+clinTables::run_app()
 ```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. You could also use GitHub Actions to re-render `README.Rmd` every time you push. An example workflow can be found here: <https://github.com/r-lib/actions/tree/v1/examples>.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
