--- a/vignettes/clinTables.Rmd
+++ b/vignettes/clinTables.Rmd
@@ -1,5 +1,6 @@
 ---
 title: "clinTables"
+date: "`r format(Sys.time(), '%d %B, %Y %H:%M:%S')`"
 output: rmarkdown::html_vignette
 vignette: >
   %\VignetteIndexEntry{clinTables}
