--- a/README.Rmd
+++ b/README.Rmd
@@ -21,6 +21,22 @@ knitr::opts_chunk$set(
 [![codecov](https://codecov.io/gh/ahasoplakus/clinTables/branch/devel/graph/badge.svg?token=G5URJVIVQM)](https://app.codecov.io/gh/ahasoplakus/clinTables)
 [![Style](https://github.com/ahasoplakus/clinTables/actions/workflows/styler.yaml/badge.svg)](https://github.com/ahasoplakus/clinTables/actions/workflows/styler.yaml)
 [![lint](https://github.com/ahasoplakus/clinTables/actions/workflows/lint.yaml/badge.svg)](https://github.com/ahasoplakus/clinTables/actions/workflows/lint.yaml)
+![GitHub commit
+activity](https://img.shields.io/github/commit-activity/m/ahasoplakus/clinTables)
+![GitHub last
+commit](https://img.shields.io/github/last-commit/ahasoplakus/clinTables)
+![GitHub pull
+requests](https://img.shields.io/github/issues-pr/ahasoplakus/clinTables)
+![GitHub repo
+size](https://img.shields.io/github/repo-size/ahasoplakus/clinTables)
+![GitHub language
+count](https://img.shields.io/github/languages/count/ahasoplakus/clinTables)
+[![Project Status: Active – The project has reached a stable, usable
+state and is being actively
+developed.](https://www.repostatus.org/badges/latest/active.svg)](https://www.repostatus.org/#active)
+
+[![Current
+Version](https://img.shields.io/github/r-package/v/ahasoplakus/clinTables/main?color=purple&label=Development%20Version)](https://github.com/ahasoplakus/clinTables/tree/main)
 <!-- badges: end -->
 
 `clinTables` is a shiny application to visualize standard tables used in <b>Clinical Trials</b>
