--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,6 @@ knitr::opts_chunk$set(
 # clinTables <img src="man/figures/logo.png" align="right" width="200" style="margin-left:50px;"/>
 
 <!-- badges: start -->
-[![Lifecycle: experimental](https://img.shields.io/badge/lifecycle-experimental-orange.svg)](https://lifecycle.r-lib.org/articles/stages.html#experimental)
 [![R-CMD-check](https://github.com/ahasoplakus/clinTables/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/ahasoplakus/clinTables/actions/workflows/R-CMD-check.yaml)
 [![codecov](https://codecov.io/gh/ahasoplakus/clinTables/branch/devel/graph/badge.svg?token=G5URJVIVQM)](https://app.codecov.io/gh/ahasoplakus/clinTables)
 [![Style](https://github.com/ahasoplakus/clinTables/actions/workflows/styler.yaml/badge.svg)](https://github.com/ahasoplakus/clinTables/actions/workflows/styler.yaml)
@@ -40,10 +39,6 @@ Version](https://img.shields.io/github/r-package/v/ahasoplakus/clinTables/main?c
 
 `clinTables` is a shiny application to visualize standard tables used in <b>Clinical Trials</b>
 
-<left>
-Find the <b>app</b> here: [clinTables](https://sukalpo94.shinyapps.io/clinTables/)
-</left>
-
 ## Installation
 
 Latest `dev` version
@@ -51,6 +46,10 @@ Latest `dev` version
 ```{r, eval=FALSE}
 remotes::install_github("ahasoplakus/clinTables")
 ```
+
+<left>
+After installation, install these packages with `install.packages(c("logger", "haven", "reactable", "markdown", "shinycssloaders", "flextable", "officer"))`
+</left>
 
 Run `library(clinTables)` to access all the exported functions from `clinTables` that help in reproducing analysis performed in the app. Or, you can run the application locally using:
 
