user guide update

--- a/vignettes/user-guide.Rmd
+++ b/vignettes/user-guide.Rmd
@@ -24,6 +24,12 @@ knitr::opts_chunk$set(
 }
 ```
 
+```{css, echo=FALSE}
+a {
+  color: #3BACB6;
+}
+```
+
 # Introduction
 
 This article provides a step-by-step user guide to run the `clinTables` application.
