--- a/vignettes/user-guide.Rmd
+++ b/vignettes/user-guide.Rmd
@@ -32,7 +32,7 @@ a {
 
 # Introduction
 
-This article provides a step-by-step user guide to run the `clinTables` application.
+This article provides a step-by-step user guide to run the `pharmtables` application.
 
 # Steps
 * [Launch application](#launch)
@@ -44,7 +44,7 @@ This article provides a step-by-step user guide to run the `clinTables` applicat
 ## Launch application {#launch}
 
 ```{r launch, eval=FALSE}
-library(clinTables)
+library(pharmtables)
 run_app()
 ```
 
@@ -68,7 +68,7 @@ within the package
 
 ### Note
 
-The **ADaM** standard datasets listed below are accepted in **clinTables v0.1.0**
+The **ADaM** standard datasets listed below are accepted in **pharmtables v0.1.0**
 
 - **adsl**: Subject-Level
 - **adae**: Adverse Events
