--- a/vignettes/user-guide.Rmd
+++ b/vignettes/user-guide.Rmd
@@ -2,7 +2,7 @@
 title: "User Guide"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{User Guide}
+  %\VignetteIndexEntry{User Guide} 
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
@@ -30,45 +30,13 @@ a {
 }
 ```
 
-# Introduction
+# Upload/Read in Data {#readdata}
 
-This article provides a step-by-step user guide to run the `pharmtables` application.
+- Switch to the **Study Setup** tab
+- Select **Use Synthetic Data** if you want to run the application using synthetic data sets available in the package
+- Select **Upload ADaM(s)** button to load external ADaM data sets. (Only *sas7bdat* **or** *RDS* formats are accepted)
 
-# Steps
-* [Launch application](#launch)
-* [Upload/Read in data](#readdata)
-* [Preview Data](#preview)
-* [Filters Setup](#setup)
-* [Run Application](#run)
-
-## Launch application {#launch}
-
-```{r launch, eval=FALSE}
-library(pharmtables)
-run_app()
-```
-
-`run_app()` will launch the application and the application homepage will load.
-
-<div class="img-border">
-```{r home, echo=FALSE}
-knitr::include_graphics("../man/figures/home.png")
-```
-</div>
-
-<br>
-
-## Upload/Read in Data {#readdata}
-
-- Switch to the **Setup** on the Homepage
-- Turn on **Load Synthetic Data** if you want to run the application using synthetic data available
-within the package
-- Click on the **Upload Files** button if you want to load data you want to run the application on.
-(Only *sas7bdat* **or** *RDS* formats are accepted)
-
-### Note
-
-The **ADaM** standard datasets listed below are accepted in **pharmtables v0.1.0**
+The following CDISC Standard **ADaM** datasets are compatible with this version
 
 - **adsl**: Subject-Level
 - **adae**: Adverse Events
@@ -78,58 +46,23 @@ The **ADaM** standard datasets listed below are accepted in **pharmtables v0.1.0
 - **adlb**: Laboratory Analysis
 - **adeg**: ECG Examinations
 
-<div class="img-border">
-```{r navbar, echo=FALSE}
-knitr::include_graphics("../man/figures/navbar.png")
-```
-</div>
+# Preview Data {#preview}
 
-Each of the domain specific reports can be accessed by the  tabs placed in the navigation panel 
-at the top of the application.
+Once the data sets are uploaded, the **Preview** tab is enabled. Switch to the same to quickly glance through the list of data sets.
 
 <div class="img-border">
-```{r read, echo=FALSE}
-knitr::include_graphics("../man/figures/readin.png")
-```
-</div>
-
-<br>
-
-## Preview Data {#preview}
-
-Once the datasets have been read, the **Preview** button is enabled.
-
-<div class="img-border">
-```{r preview, echo=FALSE}
-knitr::include_graphics("../man/figures/prev_btn.png")
-```
-</div>
-
-<br>
-
-Click on the **Preview** button to quickly glance through the data sets that have been added
-for analysis. A modal window will pop up displaying the names of data sets loaded in a 
-tabular format. Click on the expand button to view a specific data set.
-
-<br>
-
-<div class="img-border">
-```{r data_preview, echo=FALSE}
+```{r prev_data, echo=FALSE}
 knitr::include_graphics("../man/figures/prev_data.png")
 ```
 </div>
 
 <br>
 
-## Filters Setup {#setup}
+# Setup Filters {#setup}
 
-* ### ADSL Filters
+## Subject-Level Filters
 
-  * Expand the **ADSL Filters** pill beneath the **Preview** button to add/remove any **adsl** 
-    specific variables to be added as filters. By default *SEX*, *RACE*, *ETHNIC*, *AGE*, 
-    *SITEID* and *USUBJID* variables are selected.
-  * At least one of the **adsl** variables need to be selected as a filter for the 
-    application to work.
+- Expand the **ADSL** navigation pill under **Domain Specific Filters** and select the name(s) of **ADSL** variables from the dropdown to enable subject-level filtering of all tables. By default *SEX*, *RACE*, *ETHNIC*, *AGE*, *SITEID* and *USUBJID* variables are chosen (At least one needs to be selected).
 
 <div class="img-border">
 ```{r adsl_filters, echo=FALSE}
@@ -139,8 +72,7 @@ knitr::include_graphics("../man/figures/adsl_filt.png")
 
 <br>
 
-  * **ADSL Filters** appears in the left sidebar <b>once the application is run</b>
-    and can be applied to filter all domain specific reports.
+- **ADSL** filters appears at the left sidebar of the app, under **Population Flags** filter.
 
 <div class="img-border">
 ```{r adsl, echo=FALSE, dpi=300}
@@ -150,11 +82,9 @@ knitr::include_graphics("../man/figures/adsl_filt_app.png")
 
 <br>
 
-* ### Domain Specific (ADxx) Filters
+## Domain Specific Filters
 
-  * Expand the pills corresponding to each domain (ADAE, ADVS etc) to add/remove the domain
-    specific variables to be added as filters. Here is an example for **ADAE** specific filters,
-    where **AESEV** and **AEACN** have been added as filters for all **ADAE** related reports.
+- Expand the navigation pills corresponding to each domain (ADAE, ADVS etc) and select the name(s) of domain specific variables to be added as filters. Here is an example for **ADAE** specific filters, where **AESEV** and **AEACN** have been added as filters for all **ADAE** related reports.
 
 <div class="img-border">
 ```{r adae_filters, echo=FALSE}
@@ -164,26 +94,10 @@ knitr::include_graphics("../man/figures/adae_filt.png")
 
 <br>
 
-  * **ADAE Filters** will appear over the **Table Display Options** within the Filter window 
-  for all **ADAE** related reports, once the application is run. (Click on the 
-  `r shiny::icon("table-cells")` icon to open the filter window)
+- Reload the app and check the selected variables from **ADAE** appear as filters over the **Table Display Options** within the filter box for all **ADAE** related reports. (Click on the `r shiny::icon("table-cells")` icon to access the filter box)
   
 <div class="img-border">
 ```{r adae, echo=FALSE}
 knitr::include_graphics("../man/figures/adae_filt_app.png")
 ```
 </div>
-
-<br>
-
-## Run Application {#run}
-
-Finally, run the application by clicking on the **Run** button.
-
-<div class="img-border">
-```{r run, echo=FALSE, dpi=300}
-knitr::include_graphics("../man/figures/run_btn.png")
-```
-</div>
-
-**Note:** *All examples assume CDISC SDTM and/or ADaM format as input unless otherwise specified.*
